[tool.poetry]
name = "supercenter-product-recommender"
version = "0.1.0"
description = ""
authors = ["Diego León <diego.leon07@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.30"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
openpyxl = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
