[tool.poetry]
name = "supercenter_product_recommender"
version = "0.1.0"
description = ""
authors = ["Diego León <diego.leon07@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.30"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
openpyxl = "^3.1.4"
sentence-transformers = "^3.0.1"
langchain = "^0.2.4"
langchain-community = "^0.2.4"
langchain-huggingface = "^0.0.3"
google-cloud-aiplatform = "^1.56.0"
google-cloud-storage = "^2.17.0"
python-dotenv = "^1.0.1"
pinecone = "^4.0.0"
streamlit = "^1.36.0"
tensorflow-macos = "^2.16.2"
tensorflow-recommenders = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
